--- a/TransformerFromScratch.ipynb
+++ b/TransformerFromScratch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMsARMzu2MYx2gaw2aWCMTB",
+      "authorship_tag": "ABX9TyMgH1zJijDhda0XJGTTc7AG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,6 +111,24 @@
       ],
       "metadata": {
         "id": "iFlfi7VKIias"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Layer Normalization"
+      ],
+      "metadata": {
+        "id": "bQzg0eAMMXJ9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sNe_kQNsMbkk"
       },
       "execution_count": null,
       "outputs": []
