--- a/PuttingItAllTogether.ipynb
+++ b/PuttingItAllTogether.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8pAuMutTQwMu9E/KSYZfz",
+      "authorship_tag": "ABX9TyOOiSQ1QYIch6TCX8cHUC9X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
         "id": "2r7qkEChO8S5",
-        "outputId": "98f3e7e8-fe4f-44a1-c151-0b64fbb9cddd"
+        "outputId": "1c3868c9-1286-4c20-f814-8a6b070ee602"
       },
       "outputs": [
         {
@@ -49,7 +49,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -60,6 +60,59 @@
         "\n",
         "torch.__version__"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Create device agnostic code\n",
+        "device = \"CUDA\" if torch.cuda.is_available() else \"CPU\"\n",
+        "print(f\"Usinf device : {device}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jMiTOnR1Pey-",
+        "outputId": "c219ffd7-2f5e-4b1a-936d-e545dfb01b33"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Usinf device : CPU\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Data ..... lets create some data of using linear regression formula\n",
+        "#y = mx + c\n",
+        "\n",
+        "weight = 0.2\n",
+        "bias = 0.3\n",
+        "\n",
+        "#create range values\n",
+        " start = 0\n",
+        " end = 1\n",
+        " step = 0.02\n",
+        "\n",
+        " #create  X aND y(features and labels)\n",
+        "\n",
+        " #split data\n",
+        "\n",
+        " #Plot the data\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JeHNhveTQII9"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
