--- a/ComputerVision.ipynb
+++ b/ComputerVision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfM71Bm+ubDYHySNGKT+k9",
+      "authorship_tag": "ABX9TyPeOxAuvcEvffwzT2ir62Pn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -618,6 +618,136 @@
       "metadata": {
         "id": "VPcbd3bspYx1"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4.Make predictions and get models results"
+      ],
+      "metadata": {
+        "id": "c2EoDkHdKH8S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#lets create a fuction that will use the model to make predictions on data in the dataloader and then\n",
+        "#we can evaluate those predictions using the loss function and the accuracy function\n",
+        "torch.manual_seed(42)\n",
+        "def eval_model(model: torch.nn.Module,\n",
+        "               data_loader: torch.utils.data.DataLoader,\n",
+        "               loss_fn: torch.nn.Module,\n",
+        "               accuracy_fn:\n",
+        "\n",
+        "              #  Returns a dictionary containing the results of model predicting on data_loader.\n",
+        "\n",
+        "              #    Args: model(torch.nn.Module):A pytorch model capable of making predictions on data_loader\n",
+        "              #    data_loader(torch.utils.data.DataLoader): The target dataset to predict on\n",
+        "              #    loss_fn(torch.nn.Module):The loss function of model\n",
+        "              #    accuracy_fn: An accuracy function to compare the models predictions to the truth labels\n",
+        "              #    Returns :\n",
+        "              #  (dict): Results  of model making predictions on dataloader\n",
+        "\n",
+        "               loss, acc = 0, 0\n",
+        "               model.eval()\n",
+        "               with torch.inference_mode():\n",
+        "                for x, y in DataLoader:\n",
+        "                  #make predictions with the model\n",
+        "                  y_pred = model(x)\n",
+        "\n",
+        "                  #accumulate the loss and accuracy values per batch\n",
+        "                  loss += loss_fn(y_pres, y)\n",
+        "                  acc += accuracy_fn(y_true = y,\n",
+        "                                     y_pres = y_pred.argmax(dim = 1))\n",
+        "\n",
+        "\n",
+        "                #scale loss and acc to find average loss/acc per batch\n",
+        "               loss /= len(data_loader)\n",
+        "               acc /= (data_loader)\n",
+        "\n",
+        "\n",
+        "\n",
+        "return {\"model_name \":model.__class__.__name__,\n",
+        "        \"model_loss\": loss.item(),\n",
+        "        \"model_acc\": acc}\n",
+        "\n",
+        "#calculate model 0 results on test dataset\n",
+        " model_0_results  = eval_model(model = model_0, data_loader = test_dataloader,\n",
+        "                               loss_fn = loss_fn, accuracy_fn = accuracy_fn\n",
+        "                               )\n",
+        "              )\n",
+        "model_0_results\n"
+      ],
+      "metadata": {
+        "id": "yXULZGFFKWQd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creating a training loop and training a model on batches of data"
+      ],
+      "metadata": {
+        "id": "ETJvBSE-Rfk6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#import tqdm for progressbar\n",
+        "from tqdm.auto import tqdm\n",
+        "\n",
+        "#set the seed and start the timer\n",
+        "torch.manual_seed(42)\n",
+        "train_time_start_on_cpu = timer()\n",
+        "\n",
+        "#set the number of epochs\n",
+        "epochs = 3\n",
+        "\n",
+        "#create a training and testing loop\n",
+        "\n",
+        "for epoch in tqdm(range(epochs)):\n",
+        "  print(f\"Epoch : {epoch} \\n---------\")\n",
+        "  #training\n",
+        "  train_loss = 0\n",
+        "  #add a loop to loop through the trainig batches\n",
+        "  for batch, (X,y) in enumerate(train_dataloader):\n",
+        "    model_0.train()\n",
+        "    #forward pass\n",
+        "    y_pred = model_0(X)\n",
+        "\n",
+        "    #calculate loss per batch\n",
+        "    loss = loss_fn(y_pres, y)\n",
+        "    train_loss += loss\n",
+        "\n",
+        "    #optimizer zero_grad\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    #loss backward\n",
+        "    loss.backward()\n",
+        "\n",
+        "    #optimizer step\n",
+        "\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    #print how many samples have been seen\n",
+        "    if batch % 400 ==0 :\n",
+        "      print(f\"Looked at {batch * len(X)} / {len(train_dataloader.dataset)} samples\")\n",
+        "\n",
+        "  #divide total train loss by length\n",
+        "  train_loss /= len(train_dataloader)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DNIEE6_dRfF4"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
