--- a/ComputerVision.ipynb
+++ b/ComputerVision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeOxAuvcEvffwzT2ir62Pn",
+      "authorship_tag": "ABX9TyMSheHkpm7UOhQJLG8BLrDX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -569,7 +569,10 @@
         "#print what happened\n",
         "\n",
         "print(f\"shape before flattening : {x.shape} -> [color_channels, height, width]\")\n",
-        "print(f\"shape after  flattening : {output.shape} -> [color_channels, height, width]\")"
+        "print(f\"shape after  flattening : {output.shape} -> [color_channels, height, width]\")\n",
+        "\n",
+        "#print(x)\n",
+        "#print(output)\n"
       ],
       "metadata": {
         "colab": {
@@ -589,6 +592,62 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creating linear model using nn.Flatten"
+      ],
+      "metadata": {
+        "id": "o_ZxK0nBcVrL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torch import nn\n",
+        "class FashionMNISTModelV0(nn.Module):\n",
+        "  def __init__(self, input_shape: int, hidden_units: int, output_shape:int):\n",
+        "    super().__init__()\n",
+        "    self.layer_stack = nn.Sequential(\n",
+        "        nn.Flatten()\n",
+        "        nn.Linear(in_features=input_shape, out_features==hidden_units),\n",
+        "        nn.Linear(in_features=hidden_units, out_features=output_shape)\n",
+        "    )\n",
+        "  def forward(self, x):\n",
+        "    return self.layer_stack(x)"
+      ],
+      "metadata": {
+        "id": "5CAQr6DtcdDL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MOdel instantiation\n"
+      ],
+      "metadata": {
+        "id": "vrNsYQFed0rP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "#need to stup model with input parameters\n",
+        "model_0 = FashionMNISTModelV0(input_shape=784,\n",
+        "                              hidden_units=10,\n",
+        "                              output_shape=len(class_names))\n",
+        "model_0.to(\"cpu\")"
+      ],
+      "metadata": {
+        "id": "u04knfRwd7Km"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -739,12 +798,110 @@
         "  #divide total train loss by length\n",
         "  train_loss /= len(train_dataloader)\n",
         "\n",
+        "  ##TESTING\n",
+        "  #setup variables for accmulativel adding up loss and accuracy\n",
+        "  test_loss, test_acc = 0,0\n",
+        "  model_0.eval()\n",
+        "with torch.inference_mode():\n",
+        "  for X,y in test_dataloader:\n",
+        "    #Forward pass\n",
+        "    test_pred = model_0(X)\n",
         "\n",
+        "    #Calculate the loss\n",
+        "    test_loss += loss_fn(test_pred, y)\n",
         "\n",
+        "    #Calculate the accuracy\n",
+        "    test_acc += accuracy_fn(y_true=y, y_pred=test_pred.argmax(dim=1))\n",
+        "\n",
+        "    ##some comments\n",
+        "\n",
+        "    test_acc /= len(test_dataloader)\n",
+        "\n",
+        "    #print whats happening\n",
+        "  print(f\"Train loss : {train_loss :.5f} | Test loss: {test_loss:.5f}, Test acc : {test_acc:.2f}%\\n\" )\n",
+        "#calculate training time\n",
+        "train_time_end_on_cpu = timer()\n",
+        "total_train_time_model_0 = print_train_time(start=train_time_start_on_cpu,\n",
+        "                                            end = train_time_start_on_cpu,\n",
+        "                                            device=str(next(model_0.parameters()).device))\n",
         "\n"
       ],
       "metadata": {
         "id": "DNIEE6_dRfF4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.2Creating a function to time our expriments\n"
+      ],
+      "metadata": {
+        "id": "jNHI9sjaX9fF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from timeit import default_timer as timer\n",
+        "def print_train_time(start: float, end: float, device: torch.device = None):\n",
+        "  \"\"\"Some comments \"\"\"\n",
+        "\n",
+        "  total_time = end -start\n",
+        "  print(f\"Train time out {device} : {total_time:.3f} seconds\")\n",
+        "  return total_time"
+      ],
+      "metadata": {
+        "id": "AAdTinooYExf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.1 Set loss, otimizer, and evaluation metrics"
+      ],
+      "metadata": {
+        "id": "2d7P-HIiZutw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from ssl import OP_NO_COMPRESSION\n",
+        "import requests\n",
+        "from pathlib import Path\n",
+        "\n",
+        "#download helper fucntions from learn pytorch repo\n",
+        "if Path(\"helper_functions.py\").is_file():\n",
+        "  print(\"helper_functions.py alreadt exists , skippig download\")\n",
+        "else:\n",
+        "  print(\"Downloading helper functions.py\")\n",
+        "\n",
+        "#Note you need the full github url for this shit\n",
+        "  request  = request.get(\"https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/helper_functions.py\")\n",
+        "  with open(\"helper_functions.py\", \"wb\") as f:\n",
+        "    f.write(request.content)"
+      ],
+      "metadata": {
+        "id": "HdGbyhYdZ2y9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#import accuracy metric\n",
+        "from helper_functions import accuracy_fn\n",
+        "#setup loss function and optimizer\n",
+        "loss_fn = nn.CrossEntropyLoss\n",
+        "optimizer = torch.optim.SGD(parameters=model_0.parameters(), lr=0.1"
+      ],
+      "metadata": {
+        "id": "MAnD-Ro0biLD"
       },
       "execution_count": null,
       "outputs": []
